# chartfold

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  data-sources.md  development.md  mcp-server.md
docs/patient-analysis/: README.md  cancer-timeline.md  clinical-trials.md  data-gaps-report.md  deep-analysis.md  molecular-profile.md  questions-for-oncologist.md
docs/plans/: 2026-02-04-linked-sources-bidirectional.md  2026-02-14-html-spa-redesign-design.md  2026-02-14-html-spa-redesign-plan.md  2026-02-14-image-integration-design.md  2026-02-14-image-integration-plan.md  2026-02-16-spa-ux-improvements.md  2026-02-17-arkiv-export-design.md  2026-02-17-arkiv-export-plan.md  2026-02-28-arkiv-roundtrip-design.md  2026-02-28-arkiv-roundtrip-plan.md  2026-03-02-ai-chat-spa-design.md  2026-03-02-ai-chat-spa-plan.md  2026-03-13-chat-enhancements-design.md  2026-03-13-chat-enhancements-plan.md  2026-03-15-spa-enhancements-design.md  2026-03-15-spa-enhancements-plan.md
src/chartfold/: __init__.py  __main__.py  analysis_parser.py  cli.py  config.py  db.py  export.py  export_arkiv.py  export_full.py  export_html.py  import_arkiv.py  models.py  schema.sql
src/chartfold/adapters/: __init__.py  athena_adapter.py  epic_adapter.py  meditech_adapter.py  mhtml_test_result_adapter.py  mhtml_visit_adapter.py
src/chartfold/analysis/: __init__.py  cross_source.py  data_quality.py  lab_trends.py  medications.py  surgical_timeline.py  visit_diff.py  visit_prep.py
src/chartfold/core/: __init__.py  cda.py  fhir.py  utils.py
src/chartfold/extractors/: __init__.py  labs.py  pathology.py
src/chartfold/formatters/: __init__.py  markdown.py
src/chartfold/hugo/: __init__.py  generate.py  hugo.toml
src/chartfold/hugo/layouts/_default/: baseof.html  single.html
src/chartfold/hugo/layouts/shortcodes/: lightbox.html
src/chartfold/hugo/static/css/: style.css
src/chartfold/mcp/: __init__.py  config.json  server.py
src/chartfold/sources/: __init__.py  assets.py  athena.py  base.py  epic.py  meditech.py  mhtml_test_result.py  mhtml_visit.py
src/chartfold/spa/: chat_prompt.py  export.py
src/chartfold/spa/css/: chat.css  styles.css
src/chartfold/spa/js/: app.js  chart.js  chat.js  db.js  markdown.js  router.js  sections.js  ui.js
tests/: conftest.py  test_adapters.py  test_analyses.py  test_analysis.py  test_assets.py  test_athena.py  test_chat_prompt.py  test_config.py  test_core.py  test_core_parsers.py  test_data_quality.py  test_db.py  test_epic.py  test_export.py  test_export_arkiv.py  test_export_full.py  test_export_html.py  test_hugo.py  test_import_arkiv.py  test_mcp.py  test_meditech.py  test_mhtml_test_result.py  test_mhtml_visit.py  test_models.py  test_notes.py  test_pathology.py  test_roundtrip.py  test_spa_export.py
