[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chartfold"
dynamic = ["version"]
description = "Collect and consolidate personal health data from multiple EHR systems into a single queryable database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alexander Towell", email = "lex@metafunctor.com" },
]
keywords = ["health", "ehr", "clinical", "medical-records", "fhir", "cda", "patient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "lxml",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
chartfold = "chartfold.cli:main"

[project.urls]
Homepage = "https://github.com/queelius/chartfold"
Repository = "https://github.com/queelius/chartfold"

[tool.hatch.version]
path = "src/chartfold/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chartfold"]

[tool.pytest.ini_options]
testpaths = ["tests"]
