[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chartfold"
dynamic = ["version"]
description = "Collect and consolidate personal health data from multiple EHR systems into a single queryable database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alexander Towell", email = "lex@metafunctor.com" },
]
keywords = ["health", "ehr", "clinical", "medical-records", "fhir", "cda", "patient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "lxml",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
chartfold = "chartfold.cli:main"

[project.urls]
Homepage = "https://github.com/queelius/chartfold"
Repository = "https://github.com/queelius/chartfold"

[tool.hatch.version]
path = "src/chartfold/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chartfold"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # Pyflakes
    "B",          # flake8-bugbear (common bugs)
    "C4",         # flake8-comprehensions
    "SIM",        # flake8-simplify
    "PERF",       # Perflint performance
    "PL",         # Pylint rules
    "RUF",        # Ruff-specific
]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
